--- a/healthykick/templates/seller/home.html
+++ b/healthykick/templates/seller/home.html
@@ -14,6 +14,7 @@
 						<div class="login-box-body">
 							<p class="login-box-msg">Seller login</p>
 							<form method="post" action="#">
+								{% csrf_token %}
 								<input type="hidden" name="path" value="{{request.get_full_path}}">
 								<div class="form-group has-feedback">
 									<input type="email" name="email" class="form-control" placeholder="Email">
