--- a/healthykick/templates/seller/create-account.html
+++ b/healthykick/templates/seller/create-account.html
@@ -32,11 +32,12 @@
 			<div class="row">
 				<div class="col-md-9">
 					{% if messages %}
-						<ul class="messages">
+						<div class="alert alert-danger">
+							<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
 						    {% for message in messages %}
-						    	<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+						    	<li>{{ message }}</li>
 						    {% endfor %}
-						</ul>
+						</div>
 					{% endif %}
 				</div>
 	        	<div class="col-md-9 wow bounceInLeft" data-wow-delay="1.5s">
